# zifo-skills-tracker

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  run-api.sh  run-docker.sh  test-docker.sh  test_docker.sh
.dvc/: config
.github/workflows/: build-docker-action.yaml  build-docker.yaml  main.yml  neo4j-keepalive.yml
app/: config.py  main.py  utils.py
app/crud/: auth.py
app/logic/: brackets.py  cypher.py
app/models/: auth.py  consultant.py  consultants.py  graph.py  rule.py  skill.py  skills.py
app/routers/: all_data.py  auth.py  categories.py  consultant.py  consultants.py  graph.py  skills.py  user_skills.py
app/schemas/: auth.py  skills.py
app/utils/: cache.py  cypher.py  exceptions.py  get_next_uid.py  mongo.py  neo4j_connect.py  security.py  skills.py
data/: .gitignore  admin_users.txt.dvc  mock_skills_data.csv.dvc
docker/: docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.qa.yml
docker/api/: Dockerfile  Dockerfile.dev
docker/frontend/: Dockerfile
docs/: Authentication.md  Graph.md
etc/: cypher_loading.txt
frontend/: index.html  package-lock.json  package.json
frontend/js/: main.js
frontend/public/: index.html
frontend/src/: App.js  App.tsx  Graph.js  (+1 more)
html/: cytoscape.min.js  skillsgraph.css  skillsgraph.html  skillsgraph.js
integration_test/: expected_results.py  test_all_data.py  test_filter_consultant.py  test_filter_with_skills.py
pipeline/: create_import_file_for_prima.py  export_from_neo4j.py  extract_mappings_from_excel.py  generate_data_from_survey.py  generate_ids.py  generate_mock_data.py  get_prima_data.py  import_to_neo4j.py  load_from_api.py  load_mock_data.py  load_neo4j.py  merge_csv_data.py  mock_data.py  mock_seed.json  schemas.py  survey_data.py
scripts/: build-prod.sh  build-push-qa.sh  configure_dvc.sh  init-letsencrypt.sh  initialise_ec2.sh  push-prod.sh  run-dev-fresh.sh  run-dev.sh  run-prod-fresh.sh  run-prod.sh  test-dev.sh
terraform/: main.tf  outputs.tf
tests/: test_1_health.py  test_2_categories.py  test_3_graph.py  test_3_skills.py  test_4_consultants.py  test_4_user_skills.py  test_5_consultants.py  test_5_graph.py  test_6_skills.py  test_6_user_skills.py  test_all_data.py  test_categories.py  test_consultants.py  test_filter_consultant.py  test_filter_with_skills.py  test_graph.py  test_health.py  test_skills.py  test_user_skills.py
(+183 files in other folders)
