[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zifo-skills-tracker"
version = "0.0.2"
description = "Full-stack app to query, visualise and update skills data."
authors = [ "Joseph Smith <joe.smith@zifornd.com>",]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.94.1"
pydantic = "^1.10.6"
hypercorn = "^0.14.3"
python-decouple = "^3.8"
openpyxl = "^3.1.2"
msal = "^1.21.0"
pymongo = "^4.3.3"
motor = "^3.1.1"
aiocache = "^0.12.0"
itsdangerous = "^2.1.2"
passlib = "^1.7.4"
neo4j = "^5.6.0"
requests = "^2.28.2"
pandas = "^1.5.3"
boto3 = "^1.24.59"
s3fs = "^2023.3.0"
dvc = { version = "^2.49.0", extras = ["s3"] }

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mypy = "^1.1.1"
pre-commit = "^3.1.1"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
types-requests = "^2.28.11.15"
httpx = "^0.23.3"
pytest-dependency = "^0.5.1"